@@ -1,5 +1,9 @@
 2008-02-11  Mirco Bauer <meebey@meebey.net> 
 
+	* src/Main.cs: Added ORDER BY test
+
+2008-02-11  Mirco Bauer <meebey@meebey.net> 
+
 	* src/Main.cs: Fixed timing code.
 	
 	  Added NOT NULL test code.
